--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -23,9 +23,9 @@ body{
 .left_menu{
     flex-basis: 15%;
     box-shadow: #d4d4d4 5px 0px 10px;
-    height:100vh;
     display: flex;
     flex-direction: column;
+    height:100vh;
     /*align-items: center;*/
 }
 .content{
@@ -33,7 +33,8 @@ body{
     display: flex;
     flex-direction: column;
     flex-grow: 1;
-    padding:20px;
+    overflow: auto;
+    height: 100vh;
 }
 .left_menu .menu{
     list-style: none;
@@ -49,6 +50,7 @@ table{
     text-align: center;
 }
 .container{
+    margin:20px;
 }
 form{
     width:500px;
