--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -122,7 +122,7 @@ p {
     display: flex;
     width: 200px;
     justify-content: space-between;
-    margin:auto;
+    margin: auto;
 }
 
 .action-button {
@@ -134,4 +134,8 @@ p {
 
 .action-button button {
     padding: 5px;
+}
+
+.left_part {
+    padding: 20px;
 }
