--- a/public/css/landing/style.css
+++ b/public/css/landing/style.css
@@ -107,6 +107,7 @@ header {
 	color: #878787;
 	font-family: Montserrat, sans-serif;
 	font-size: 14px;
+	max-width: 370px;
 }
 .element{
 	padding:10px 20px;
